# boost_beast_client_server

./: README.md  server.json
client/: CMakeLists.txt
client/inc/: client.h  cmd_parser.h  responce_parser.h
client/src/: client.cpp  cmd_parser.cpp  main.cpp  responce_parser.cpp
server/: CMakeLists.txt
server/inc/: request_handler.h  server.h  server_data.h  session.h  threadpool.h
server/src/: main.cpp  request_handler.cpp  server.cpp  server_data.cpp  session.cpp  threadpool.cpp
